# graph_chat

./: .env.sample  .gitignore  README.md  Taskfile.yml  main.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
data/: download_data.sh
docs/: graph-schema.md
infra/: main.tf  outputs.tf  providers.tf  variables.tf
src/: config.py
src/agent/: agent.py
src/agents/: agent.py
src/agents/dynamic_query_agent/: __init__.py
src/agents/memory/: preference_signals.py
src/agents/models/: models.py
src/agents/signals_extraction_agent/: __init__.py
src/agents/tools/: event_hub_tool.py  graph_service.py  graph_tool.py
src/agents/user_agent/: __init__.py
src/consume/: clear_events.py  consume.py  event_hub_consumer.py  gremlin_client.py
src/ingest/: csv_loader.py  event_hub_producer.py  ingest.py  ingest_article_nodes.py  ingest_customer_nodes.py  ingest_edges.py  ingest_products.py
src/ingestion/consume/: consume.py  event_hub_consumer.py  gremlin_client.py
src/ingestion/ingest/: event_hub_producer.py  ingest.py  ingest_article_nodes.py  ingest_customer_nodes.py  ingest_edges.py  reduce_csvs.py
src/ingestion/models/: events.py
src/models/: events.py
tests/: test_config.py  test_event_models.py  test_graph_tool.py  test_models.py  test_preference_signals_eval.py
